--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,3 +1,17 @@
-.navbar {
+header {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  min-height: 30px;
   display: flex;
+  align-items: center;
+}
+
+.link {
+  margin-left: 15px;
+  color: black;
+}
+
+.active {
+  color: rgb(240, 142, 142);
+  margin-left: 15px;
 }
